// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput does not highlights itself and show ErrorText if errorMessage is not present 1`] = `
<Component>
  <withTheme(TextInput)
    autoFocus={true}
    error={false}
    label="Title"
    onBlur={[MockFunction]}
    onChangeText={[MockFunction]}
    value=""
  />
  <Styled(Paragraph) />
</Component>
`;

exports[`TextInput highlights itself and show ErrorText if errorMessage is present 1`] = `
<Component>
  <withTheme(TextInput)
    autoFocus={true}
    error={true}
    label="Title"
    onBlur={[MockFunction]}
    onChangeText={[MockFunction]}
    value=""
  />
  <Styled(Paragraph)>
    foo
  </Styled(Paragraph)>
</Component>
`;
